[package]
name = "rustls-mio"
version = "0.0.1"
edition = "2018"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
license = "Apache-2.0/ISC/MIT"
description = "Rustls example code and tests that depend on mio."
publish = false

[features]
default = ["logging"]
logging = ["log"]
dangerous_configuration = ["rustls/dangerous_configuration"]
quic = ["rustls/quic"]

[dependencies]
log = { version = "0.4.4", optional = true }
rustls = { path = "../rustls" }
rustls-pemfile = "0.2.0"
sct = { git = "https://github.com/jyao1/sct.rs.git", branch = "uefi_support" }

[dev-dependencies]
ct-logs = { git = "https://github.com/xiaoyuxlu/ct-logs.git", branch = "uefi_support" }
docopt = "~1.1"
env_logger = "0.8.2"
mio = { version = "0.7", features = ["os-poll", "tcp"] }
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
webpki-roots = { git = "https://github.com/jyao1/webpki-roots", branch = "uefi_support" }
ring = { git = "https://github.com/gaojiaqi7/ring.git", branch = "uefi_support", default-features = false, features = ["alloc"] }

[[example]]
name = "tlsclient"
path = "examples/tlsclient.rs"

[[example]]
name = "tlsserver"
path = "examples/tlsserver.rs"
